# rtype

./: CMakeLists.txt  README.md  clean.sh  compile_linux.sh  compile_windows.sh  conanfile.txt  doxygen.config  rfc5359.txt
Client/include/: client.hpp  entityHandler.hpp  screen.hpp  soundManager.hpp  vector.hpp
Client/src/: client.cpp  entityHandler.cpp  main.cpp  screen.cpp  soundManager.cpp  vectors.cpp
Lib/GameEngine/include/: Constants.hpp
Lib/GameEngine/include/Components/: Component.hpp  Cooldown.hpp  Damages.hpp  Friendly.hpp  Health.hpp  Hitbox.hpp  IComponent.hpp  Position.hpp  Score.hpp  Speed.hpp  Style.hpp
Lib/GameEngine/include/Entity/: Entity.hpp  EntityManager.hpp
Lib/GameEngine/include/Utils/: Background.hpp  Button.hpp  Musics.hpp  Sounds.hpp  Sprite.hpp  Text.hpp
Lib/GameEngine/src/: Entity.cpp  EntityManager.cpp
Lib/GameEngine/src/Components/: Component.cpp  Cooldown.cpp  Damages.cpp  Friendly.cpp  Health.cpp  Hitbox.cpp  Position.cpp  Score.cpp  Speed.cpp  Style.cpp
Lib/GameEngine/src/Utils/: Background.cpp  Button.cpp  Musics.cpp  Sounds.cpp  Sprite.cpp  Text.cpp
Lib/Network/include/: client_interface.hpp  connection.hpp  connection_it.hpp  connection_type.hpp  error.hpp  message.hpp  safe_queue.hpp  server_interface.hpp  server_it.hpp
Lib/Network/src/: error.cpp
Server/include/: Clock.hpp  Lobby.hpp  ManageLobby.hpp  thread_codes.hpp
Server/include/Entities/: Enemy.hpp  IEntity.hpp  Player.hpp  PowerUp.hpp  Rocket.hpp  Wall.hpp
Server/include/utils/: sendWaveNumber.hpp  shutdown.hpp  unloadId.hpp  utils.hpp
Server/src/: Clock.cpp  Lobby.cpp  ManageLobby.cpp  main.cpp
Server/src/Entities/: Enemy.cpp  Player.cpp  PowerUp.cpp  Rocket.cpp  Wall.cpp
Server/src/utils/: sendWaveNumber.cpp  unloadId.cpp  utils.cpp
include/: NetworkAlias.hpp  codes.hpp
tests/tests_server/: spam_connection.sh  spam_message.sh
